--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -11,11 +11,17 @@ body {
     background-color: #FD6E0A;
     border-radius: 5px;
     font-weight: 700;
+    border: 0;
+    font-weight: 700;
+    color: white;
+    padding: 15px 35px;
 }
 
 /* nav related styles */
 nav {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .nav-title {
@@ -26,6 +32,7 @@ nav {
 
 nav > ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
