--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,23 @@ body {
     padding: 15px 35px;
 }
 
+.section-title {
+    font-size: 35px;
+    font-weight: 700;
+    color: #181818;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.section-description {
+    font-size: 18px;
+    color: #757575;
+    text-align: center;
+    line-height: 1.5;
+}
+
+
+
 /* nav related styles */
 nav {
     display: flex;
@@ -87,4 +104,41 @@ nav a {
 
 .banner .profile-pic {
     width: 500px;
+}
+
+/* main related styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about section related styles */
+.about {
+    background-color: #FFF8F3;
+    margin: 130px 0;
+    padding: 130px;
+    border-radius: 10px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.about-info {
+    text-align: center;
+    
+}
+
+.info-title {
+    font-weight: 400;
+    margin-bottom: 7px;
+    color: #757575;
+}
+
+.info-description {
+    font-weight: 700;
+    margin-top: 0;
+    
 }
