--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,144 +1,187 @@
 /* common shared styles */
 body {
-    font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .text-primary {
-    color: #FD6E0A;
+  color: #fd6e0a;
 }
 
 .btn-primary {
-    background-color: #FD6E0A;
-    border-radius: 5px;
-    font-weight: 700;
-    border: 0;
-    font-weight: 700;
-    color: white;
-    padding: 15px 35px;
+  background-color: #fd6e0a;
+  border-radius: 5px;
+  font-weight: 700;
+  border: 0;
+  font-weight: 700;
+  color: white;
+  padding: 15px 35px;
 }
 
 .section-title {
-    font-size: 35px;
-    font-weight: 700;
-    color: #181818;
-    text-align: center;
-    margin-bottom: 30px;
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .section-description {
-    font-size: 18px;
-    color: #757575;
-    text-align: center;
-    line-height: 1.5;
+  font-size: 18px;
+  color: #757575;
+  text-align: center;
+  line-height: 1.5;
 }
-
-
 
 /* nav related styles */
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 200px 0 160px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 200px 0 160px;
 }
 
 .nav-title {
-    color: #181818;
-    font-size: 45px;
-    font-weight: 800;
+  color: #181818;
+  font-size: 45px;
+  font-weight: 800;
 }
 
 nav > ul {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 nav li {
-    list-style: none;
-    margin-right: 50px;
+  list-style: none;
+  margin-right: 50px;
 }
 
 nav a {
-    text-decoration: none;
-    color: #474747;
+  text-decoration: none;
+  color: #474747;
 }
-
 
 /* header related styles */
 .header {
-    background-color: #FFF8F3;
-    background-image: url("../images/header_bg.png");
-    background-repeat: no-repeat;
-    background-position: bottom right;
+  background-color: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 0 150px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  padding: 30px 30px 0 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .banner-content {
-    max-width: 500px;
+  max-width: 500px;
 }
 
 .banner-greeting {
-    font-size: 45px;
-    font-weight: 600;
-    color: #474747;
-    margin-bottom: 0;
+  font-size: 45px;
+  font-weight: 600;
+  color: #474747;
+  margin-bottom: 0;
 }
 
 .banner-title {
-    font-size: 85px;
-    font-weight: 700;
-    color: #181818;
-    margin-top: 5px;
-    margin-bottom: 20px;
+  font-size: 85px;
+  font-weight: 700;
+  color: #181818;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 .banner-description {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .banner .profile-pic {
-    width: 500px;
+  width: 500px;
 }
 
 /* main related styles */
 main {
-    max-width: 1140px;
-    margin: 0 auto;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+main section {
+    margin-top: 130px;
 }
 
 /* about section related styles */
 .about {
-    background-color: #FFF8F3;
-    margin: 130px 0;
-    padding: 130px;
-    border-radius: 10px;
+  background-color: #fff8f3;
+  margin: 130px 0;
+  padding: 130px;
+  border-radius: 10px;
 }
 
 .about-info-container {
-    display: flex;
-    justify-content: space-around;
-    
+  display: flex;
+  justify-content: space-around;
 }
 
 .about-info {
-    text-align: center;
-    
+  text-align: center;
 }
 
 .info-title {
-    font-weight: 400;
-    margin-bottom: 7px;
-    color: #757575;
+  font-weight: 400;
+  margin-bottom: 7px;
+  color: #757575;
 }
 
 .info-description {
+  font-weight: 700;
+  margin-top: 0;
+}
+
+/* What I do section related styles */
+.what-i-do {
+}
+
+#what-i-dosection {
+  padding: 0 150px;
+}
+
+.skills-container {
+  margin-top: 50px;
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  padding: 30px;
+  background-color: #fff;
+  box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+}
+
+.skill-title {
+    color: #181818;
     font-weight: 700;
-    margin-top: 0;
-    
+    font-size: 20px;
+}
+
+.skill-description {
+    color: #757575;
+    line-height: 28px;
+}
+
+/* Resume section styles */
+.resume-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
