--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -222,4 +222,7 @@ main section {
 /* footer styles */
 footer {
   display: flex;
+  background-color: #FFF8F3;
+  padding: 130px 230px;
+  margin-top: 100px;
 }
