--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -222,7 +222,29 @@ main section {
 /* footer styles */
 footer {
   display: flex;
-  background-color: #FFF8F3;
-  padding: 130px 230px;
+  gap: 100px;
+  background-color: #fff8f3;
+  padding: 130px 200px;
   margin-top: 100px;
+}
+
+.footer-column {
+  width: 50%;
+}
+
+.social-links a {
+  margin-right: 24px;
+}
+
+.contact input[type="text"],
+.contact input[type="email"],
+.contact textarea {
+  display: block;
+  width: 100%;
+  padding: 18px 35px;
+  margin-bottom: 24px;
+  border: 0;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 16px;
 }
